--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
 
   <div class="header">
-    <h1>Reliable, efficient delivery</h1>
-    <h2>Powered by Technology</h2>
-    <p>Our Artificial Intelligence powered tools use millions of project data points
+    <p class="header__top">Reliable, efficient delivery</p>
+    <p class="header__byline">Powered by Technology</p>
+    <p class="header__body">Our Artificial Intelligence powered tools use millions of project data points
     to ensure that your project is successful</p>
   </div>
   <div class="container">
